# search-requests-clusterization-experiment

./: .env.example  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/examples/taylor_swift_dancing/: groups.json  input.json
backend/migrations/: env.py
backend/migrations/versions/: 5c540186b6fb_ensure_unique_text.py  60de8e8a2bc2_add_sample_field_for_embeddings.py  fb71afa5ed82_init.py
backend/web_app/: app.py  config.py  db.py  log.py  main.py
backend/web_app/api/: __init__.py  clusterizer.py
backend/web_app/models/: __init__.py  clusterizer.py  embeddings.py
backend/web_app/services/: embeddings.py
backend/web_app/tools/: __init__.py
backend/web_app/tools/clusterizer/: __init__.py  utils.py
backend/web_app/tools/requester/: __init__.py
backend/web_app/tools/similarity_processor/: __init__.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.mts
frontend/src/: components.d.ts  typed-router.d.ts
frontend/src/components/: Base.vue
frontend/src/pages/: index.vue
frontend/src/pages/test/: [id].vue
frontend/src/plugins/: axios.ts  vuetify.ts
frontend/src/stores/: clusterizer.ts
frontend/src/views/clusterizer/: requests.ts  types.d.ts
