[project]
name = "search-requests-clusterization-experiment"
version = "0.1.0"
description = ""
authors = [
    { name = "Oleksandr Liebiediev", email = "woutut@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "openai (>=1.61.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "brotlipy (>=0.7.0,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]
exclude = [
    '^deploy\.py$'
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
